# durhack-x

./: .gitignore  Cargo.toml
class-chat/: package-lock.json  package.json  pnpm-lock.yaml
class-chat/src/: App.css  App.jsx  chat.jsx  index.css  main.jsx
class-chat/src/services/: summarizeMessage.js
client/: Cargo.toml
client/src/: main.rs
compute_share/client/: Cargo.toml
compute_share/server/: coordinator_v4.db  main.go  server.db
compute_share/server/data/: mortality_model.json
compute_share/world/: README.md
compute_share/world/prototype/: index.html  main.js
compute_share/world/seer/: index.html  main.js  style.css
ctf/honeypot/: credentials.txt  flags_walkthrough.md
ctf/java/: README.md  challenge.md  exploit-steps.md
server/: Cargo.toml  coordinator_v4.db  go.mod  go.sum  main.go
server/.gocache/: trim.txt
server/.gocache/00/: 003febcb9fc8f3b4009085fbed3d53ee37dcf2bccdf78c4d33c4a6e187ccbd0d-a  0088093c87157029d0d5979dc3bb405c1f7b74d9465914bfa8b6c6badb30ddff-a  00bbd48d68829c02dee8d12e1753b3e6853bb66d8170ee295af998f07990a6c2-a  00e85f6a97f5acef6cae0646c41e543a3034ddd8bb4353080779a083281c94cc-a
server/.gocache/01/: 01064e9eeea98bf807159d476ad85a6903491659e08488ec48af9fcc8137c446-a  0131d146ad7d54faaf3b6444440723d6f7afa54ee9d4fce7ba22983bf6a2ad90-a  01565b62f9839ef2983dcb07a654afcd3261ef90267b033e694b8518ce2f65fa-a  01afb8b635c25b34f3a1a7423e9449fde3c4fd5c04ce0f5a69eaa33d9f91c7f7-a  01eefa9f0c26b96760b235b0f1f94c1ab5ec7d531602f640d18e8ae515b965b7-d
world/: README.md
world/prototype/: index.html  main.js
(+842 files in other folders)
