[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }

# Updated libp2p with DNS support
libp2p = { version = "0.54", features = [
  "tcp",
  "dns",
  "mdns",
  "tokio",
  "noise",
  "yamux",
  "floodsub",
  "identify",
  "macros" # this brings NetworkBehaviour derive macro
] }


anyhow = "1.0"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
rand = "0.9.2"
base64 = "0.22.1"
futures = "0.3.31"
